--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "runTests": "cypress run —headed --browser electron --spec 'cypress/e2e/*'"
+    "runAllTestsHeadedElectron": "cypress run --headed --browser electron --spec 'cypress/e2e/*'",
+    "runAllTestsHeadlessElectron": "cypress run --headless --browser electron --spec 'cypress/e2e/*'",
+    "runAllTestsHeadedChrome": "cypress run --headed --browser chrome --spec 'cypress/e2e/*'",
+    "runAllTestsHeadlessChrome": "cypress run --headless --browser chrome --spec 'cypress/e2e/*'"
   },
   "keywords": [],
   "author": "",
